# Just1_test

./: .gitignore  README.md
Bot/Hardware/: Bill_of_material.md  README.md  WiringScheme.excalidraw
Bot/Hardware/Architecture/: Power_Architecture.md  System_Architecture.md
Bot/Hardware/CAD/ToPrint/: LD19 Holder.STL
Bot/Software/: NodeDescription.md  README.md  requirements.txt
Bot/Software/src/just1_bringup/: package.xml  setup.py
Bot/Software/src/just1_bringup/config/: nav2_params.yaml
Bot/Software/src/just1_bringup/launch/: just1.launch.py
Bot/Software/src/just1_camera/: package.xml  setup.py
Bot/Software/src/just1_camera/just1_camera/: camera_node.py
Bot/Software/src/just1_diagnostics/: package.xml  setup.py
Bot/Software/src/just1_imu/: package.xml  setup.py
Bot/Software/src/just1_imu/just1_imu/: imu_node.py
Bot/Software/src/just1_interface/: package.xml
Bot/Software/src/just1_interface/msg/: WheelSpeeds.msg
Bot/Software/src/just1_joystick_driver/: package.xml  setup.py
Bot/Software/src/just1_motors/: package.xml  setup.py
Bot/Software/src/just1_motors/just1_motors/: autonomous_controller_node.py  encoder_watcher.py  manual_controller_node.py  utils_motors.py
