<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>just1_bringup</name>
  <version>0.0.1</version>
  <description>Launch files and configurations for bringing up the robot</description>
  <maintainer email="nicolasrodriguez01dev@pm.me">Nico</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>just1_joystick_driver</exec_depend>
  <exec_depend>just1_motors</exec_depend>
  <exec_depend>just1_diagnostics</exec_depend>
  <exec_depend>just1_camera</exec_depend>
  <exec_depend>just1_imu</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>ldlidar_stl_ros2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 